<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_message">Message</string>
    <string name="title_contact">Contact</string>
    <string name="title_group">Group</string>
    <string name="title_recent">Recent</string>
    <string name="title_more">More</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Enter your full name</string>
    <string name="create_account12">Create account 1/2</string>
    <string name="create_account_name_detail">Using real name make you more recognize</string>
    <string name="confirm_button">Confirm</string>
    <string name="enter_confirmation">Please check your email and enter confirmation code</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="phone_number">Enter your phone number</string>
    <string name="email">Enter your email</string>
    <string name="enter_password">Password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="pls_enter_new_password">Please enter your new password</string>
    <string name="enter_old_password">Enter your current password</string>
    <string name="pls_enter_old_password">Please enter your current password</string>
    <string name="re_enter_password">Re-enter your password</string>
    <string name="check_phone_empty">Please enter phone number …</string>
    <string name="check_phone_regex">Phone number invalid …</string>
    <string name="pls_re_enter_password">Please re-enter your new password</string>
    <string name="check_password">These passwords don\'t match. Try again</string>
    <string name="check_password_empty">Please enter your password …</string>
    <string name="check_email_empty">Please enter your email …</string>
    <string name="check_user_name_empty">Please enter your username …</string>
    <string name="check_name_empty">Please enter your full name …</string>
    <string name="success_text">Success</string>
    <string name="continue_text">Continue</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_success">Congratulations, your account has been successfully created.</string>
    <string name="language">Choose your language</string>
    <string name="accept">Accept</string>
    <string name="notification_feature_error">The feature has not been updated</string>
    <string name="feature_error_content">Waiting for new update …</string>
    <string name="friend_request">Friend request</string>
    <string name="phone_book_friend">Phone book friend</string>
    <string name="all_contact">All contacts</string>
    <string name="refresh">Refresh</string>
    <string name="update_info">Update Information</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="mobile">Mobile</string>
    <string name="view_avatar">View avatar</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profile_display_name">Name</string>
    <string name="edit_profile_username">Username</string>
    <string name="error_dialog_title">Error …</string>
    <string name="cancel_button">Cancel</string>
    <string name="un_name_group">Unnamed group</string>
    <string name="no_member">No members yet.</string>
    <string name="find_by_name_or_phone">Find via name or phone number</string>
    <string name="confirm_abort_create_group">Do you want to cancel the creation of this group?</string>
    <string name="continue_create_group">Continue creating groups</string>
    <string name="abort_create_group">Cancel</string>
    <string name="creating_room_message_dialog">Creating group. Please wait a moment …</string>
    <string name="change_password">Change password</string>
    <string name="change_password_detail_8_char">Password must be 8 characters or more.</string>
    <string name="change_password_detail_not_same_old_password">Password must not be the same as your old password.</string>
    <string name="accept_button">Accept</string>
    <string name="phone_book_friend_title">You\'ve got these contacts in your phone book</string>
    <string name="add_button">Add</string>
    <string name="send_friend_request_title">Friend Request Send</string>
    <string name="send_friend_request_message_success">Friend request has been sent successfully</string>
    <string name="add_friend_title">Add friend</string>
    <string name="add_friend_detail">Add friend with phone number</string>
    <string name="recall_button">Recall</string>
    <string name="login_session_expired">Your session has expired. Please log in again.</string>
    <string name="login_session_expired_title">Session expired.</string>
    <string name="you">You</string>
    <string name="friend_from">Friend from</string>
    <string name="group_admin">Group Admin.</string>
    <string name="group_creator">Group creator.</string>
    <string name="member_add_by">Add by %1$s at %2$s</string>
    <string name="member_add_by_undefine">Add by undefine</string>
    <string name="delete_member">Delete %1$s  from the group?</string>
    <string name="delete">Delete</string>
    <string name="set_member_to_admin">Set %1$s to admin of the group?</string>
    <string name="set_member_to_admin_success">Set %1$s to admin of group successfully</string>
    <string name="seen_at">Seen at</string>
    <string name="online">Online</string>
    <string name="friend">Friend</string>
    <string name="add_friend">Add friend</string>
    <string name="reply">Reply</string>
    <string name="remove">Remove</string>
    <string name="chat">Chat</string>
    <string name="view_profile">View Profile</string>
    <string name="reaction">Reaction</string>
    <string name="read_by">Read</string>
    <string name="groups_in_common">Groups in common with %1$s</string>
    <string name="search_group">Search groups …</string>
    <string name="logout">Log out</string>
    <string name="app_info">App information</string>
    <string name="logout_failed_try_again">Log out failed. Try again</string>
    <string name="search_more">Search messages, friends …</string>
    <string name="find_friend_via_phone_number">Find friend via phone number</string>
    <string name="no_result">No results</string>
    <string name="title_add_member">Add member</string>
    <string name="add_member_selected">Selected</string>
    <string name="add_member_success">Add member successfully</string>
    <string name="add_member_cancel">Do you want to cancel adding members?</string>
    <string name="add_member_continue">Continue adding member</string>
    <string name="permission_needed_title">Please grant permission</string>
    <string name="permission_needed_message">Permission is needed to access files from your device …</string>
    <string name="members">members</string>
    <string name="allow_permission">Please allow the Permission</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="options">Option</string>
    <string name="stored_media">Stored media</string>
    <string name="view_groups_in_common">View group in common</string>
    <string name="create_group_with_this_user">Create group with this person</string>
    <string name="block_messages">Block Messages</string>
    <string name="created">Created</string>
    <string name="view_members">View members</string>
    <string name="leave_group">Leave group</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_chat_history">Delete chat history</string>
    <string name="report">Report</string>
    <string name="leave_group_confirm">Leave group %1$s ?</string>
    <string name="delete_chat_history_confirm">Delete chat history?</string>
    <string name="rename_group_title">Rename</string>
    <string name="select_picture">Select picture</string>
    <string name="permission_read_contact_is_required">Read Contacts permission is required.</string>
    <string name="member">Members</string>
    <string name="search_friends">Search friends</string>
    <string name="group_name">Set group name</string>
    <string name="create_group">Create group</string>
    <string name="type_a_message">Type a message</string>
    <string name="new_group_name">New name</string>
    <string name="english_language">English</string>
    <string name="vietnamese_language">Tiếng Việt</string>
    <string name="develop_team">Mai Kien Cuong \nTruong Cong Cuong \nNguyen Cong Thanh Dat \nLuu Tuan Kha</string>
    <string name="friend_request_received_empty">Friend request received is empty.</string>
    <string name="friend_request_sent_empty">Friend request sent is empty.</string>
    <string name="common_groups">Common group</string>
    <string name="type_verification_code">Your verification code</string>
    <string name="present_online">Online</string>
    <string name="change_language">Change Language</string>
    <string name="message_type_image">Image</string>
    <string name="message_type_video">Video</string>
    <string name="message_type_link">Link</string>
    <string name="message_type_file">File</string>
    <string name="language_english" translatable="false">@string/english_language</string>
    <string name="language_vietnamese" translatable="false">@string/vietnamese_language</string>
    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_vietnamese</item>
    </string-array>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="load_more">Load more</string>
    <string name="avatar">Avatar</string>
    <string name="no_group">You don\'t have any groups.</string>
    <string name="view_information">View Information</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="friend_request_sent_to_user">Friend request sent to %1$s.</string>
    <string name="friend_request_received_from_user">%1$s sent to you a friend request.</string>
    <string name="relation_is_friend">The two of you are now friends. Let\'s talk together.</string>
    <string name="relation_is_none">Make friends with %1$s to create memorable moments.</string>
    <string name="view_image_before_send">Image Preview</string>
    <string name="view_video_before_send">Video Preview</string>
    <string name="remove_friend_with_user">Remove friend with %1$s?</string>
    <string name="waiting">Please wait.</string>
    <string name="email_title">Email</string>
    <string name="helper_text_update_info_display_name">This name will be visible to others.</string>
    <string name="helper_text_update_info_user_name">Username is unique and will not be changed or deleted once created. You can use username and password to login.</string>
    <string name="update_info_success">Update information successfully.</string>
    <string name="change_avatar_fail">Change avatar failed. Please try again later.</string>
    <string name="hint_signin_username">Username, phone or email.</string>
    <string name="recall_admin_for_member">Revoke %1$s\'s group admin rights?</string>
    <string name="recall_admin_for_member_success">Successfully revoked %1$s\'s group admin rights.</string>
    <string name="un_block_messages">Un block message</string>
    <string name="block_message_confirm">Block message from %1$s?</string>
    <string name="un_block_message_confirm">Un block message from %1$s?</string>
    <string name="report_content">Report content</string>
    <string name="file_attachment">Attach photo</string>
    <string name="report_user">Report user</string>
</resources>