<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dark_background_dialog_circle"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_language"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_change_language_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/united_kingdom"
                android:drawableEnd="@drawable/ic_baseline_radio_button_unchecked_24"
                android:drawablePadding="10dp"
                android:padding="8dp"
                android:text="@string/language_english"
                android:textColor="@color/white"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/txt_change_language_vietnamese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vietnam"
                android:drawableEnd="@drawable/ic_baseline_radio_button_unchecked_24"
                android:drawablePadding="10dp"
                android:padding="8dp"
                android:text="@string/language_vietnamese"
                android:textColor="@color/white"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>