<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_change_password_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/purple_200"
        app:contentInsetEnd="0dp"
        app:contentInsetEndWithActions="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_change_password_old_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:theme="@style/CustomTextInputLayout"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/ErrorTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_change_password_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:theme="@style/CustomTextInputLayout"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/ErrorTextInputLayout"
        app:helperText="@string/change_password_detail_8_char"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/HelperTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_change_password_re_enter_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:theme="@style/CustomTextInputLayout"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/ErrorTextInputLayout"
        app:helperText="@string/change_password_detail_not_same_old_password"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/HelperTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_change_password_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/red"
        android:textSize="16sp">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password_action"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:minWidth="200dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_200"
            app:cornerRadius="16dp"
            app:iconGravity="textStart" />

        <ProgressBar
            android:id="@+id/change_password_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>