<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.UpdateInformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_update_information2_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/purple_200"
        app:contentInsetEnd="0dp"
        app:contentInsetEndWithActions="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_edit_profile_avt"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:src="@drawable/defaultprofile">

        </ImageView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_edit_profile_avt"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_edit_profile_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableEnd="@drawable/ic_baseline_edit_24"
                    android:hint="@string/edit_profile_display_name"
                    android:textColor="@color/black">

                </EditText>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbt_edit_profile_gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/gender_male"
                        android:textIsSelectable="true"
                        android:textSize="20sp">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/rbt_edit_profile_gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:text="@string/gender_female"
                        android:textSize="20sp">

                    </RadioButton>
                </RadioGroup>

                <EditText
                    android:id="@+id/edt_edit_profile_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableEnd="@drawable/ic_baseline_edit_24"
                    android:textColor="@color/black">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_edit_profile_save"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_btn_friend_phonebook"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="1"
        android:text="@string/update_info"
        android:textAlignment="center"
        app:backgroundTint="@null">

    </Button>

</LinearLayout>